--- a/pagues/index.html
+++ b/pagues/index.html
@@ -34,6 +34,7 @@
       <br />
       <p id="error_de_Comprobacion">Comprueba la contaseña o la cuenta</p>
       <a href="#" class="enlace">Se te olvido la contraseña</a>
+      <p><a href="/frontend/pagues/nose.html"class="enlace">Redirección</a></p>
     </div>
     
     <script type="text/javascript" src="source/js/lienzo.js"></script>
