--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>pagina principal</title>
-    <link rel="stylesheet" type="text/css" href="/frontend/css/formurario.css">
+    <link rel="stylesheet" type="text/css" href="css/formurario.css">
     <script type="text/javascript" src="source/js/jquery.js"></script>
   </head>
   <body>
@@ -37,6 +37,6 @@
       <p><a href="/frontend/pagues/nose.html"class="enlace">Redirección</a></p>
     </div>
     
-    <script type="text/javascript" src="/frontend/js/lienzo.js"></script>
+    <script type="text/javascript" src="js/lienzo.js"></script>
   </body>
 </html>
