--- a/pagues/nose.html
+++ b/pagues/nose.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" type="text/css" href="/frontend/css/styles 1.css">
+    <link rel="stylesheet" type="text/css" href="../css/styles 1.css">
 </head>
 
 <body>
@@ -55,8 +55,6 @@
             </div>
         </nav>
     </header>
-
-    ---
 
     <section class="py-4 bg-light">
         <div class="container">
@@ -246,7 +244,7 @@
         crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="/frontend/js/lienzo.js"></script>
+    <script src="../js/lienzo.js"></script>
 </body>
 
 </html>
